Make sure overflow issue does not happen in tables

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -21,6 +21,9 @@
 .mandataris-data-table .data-table__actions--top {
   display: none;
 }
+.mandataris-data-table > .container-flex--scroll {
+  display: block;
+}
 
 table.data-table thead {
   color: #212121;
